# pyutils8ccr

./: README.md  pyproject.toml  requirements.txt  upgrade.txt
.githooks/: pre-push
pyutils8ccr/: __init__.py  config.py  editor.py  facts.py  file.py  log.py  menu.py  yaml.py
scripts/: python  update_minor.py
